# overload-web

./: .flake8  .gitignore  Dockerfile  README.md  compose.yaml  dev-requirements.txt  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test-coverage.yaml  unit-tests.yaml
overload_web/: __init__.py  config.py  constants.json  constants.py  errors.py  form_constants.json  logging_config.py  main.py  schemas.py  services.py  sierra_adapters.py  template_constants.py  vendor_specs.json
overload_web/adapters/: depends.py  home.py  marc_adapters.py  object_factories.py  orm.py  pvf.py  repository.py  schemas.py  sierra_adapters.py
overload_web/api/: overload_api.py  schemas.py
overload_web/application/: commands.py  constants.py  dto.py  file_service.py  full_records_service.py  object_factories.py  order_records_service.py  ports.py  record_service.py  services.py  template_service.py  unit_of_work.py
overload_web/application/commands/: file_io.py  order_template.py  process.py  process_batch.py  report.py  reporting.py  statistics.py
overload_web/application/dto/: __init__.py  bib.py  bib_dto.py  file.py
overload_web/application/ports/: db.py  files.py  marc.py  marc_parser.py  marc_updater.py  marc_writer.py  sierra.py
overload_web/application/services/: __init__.py  bib_processing.py  file.py  file_service.py  marc.py  marc_services.py  marc_updates.py  match_service.py  record_service.py  records.py  report_service.py  report_services.py  services.py  template.py  template_service.py  unit_of_work.py
overload_web/bib_records/application/: record_service.py
overload_web/bib_records/domain/: bib_matcher.py  bib_services.py  bibs.py  marc_protocols.py  matcher_service.py  parser_service.py  reviewer_service.py  strategies.py  updater_service.py
overload_web/bib_records/domain_models/: bibs.py  marc_protocols.py  matches.py  sierra_responses.py
overload_web/bib_records/domain_services/: analysis.py  attacher.py  match.py  matcher.py  parse.py  parser.py  report_service.py  review.py  reviewer.py  serialize.py  serializer.py  update.py  updater.py
overload_web/bib_records/infrastructure/: clients.py  dto.py  marc.py  sierra.py  (+9 more)
overload_web/data/: form_constants.json  locations.json  logging_config.json  mapping_specs.json  vendor_specs.json
overload_web/domain/: bib_matcher.py  match_service.py  model.py  new_model.py
overload_web/domain_models/: responses.py
overload_web/domain_protocols/: file_io.py  marc_protocols.py  repositories.py
overload_web/domain_services/: bib_matcher.py
overload_web/entry_points/: front_end.py  home.py  streamlit_app.py
overload_web/front_end/: constants.py  home.py  pvf.py  streamlit_app.py
overload_web/frontend/: jinja_frontend.py
overload_web/infrastructure/: batch_db.py  clients.py  dto.py  factories.py  file_io.py  file_loaders.py  loader.py  local_io.py  marc.py  marc_adapters.py  marc_engine.py  object_factories.py  orm.py  reporter.py  repository.py  schemas.py  sftp.py  sierra.py  sierra_adapters.py  tables.py  template_db.py  vendor.py
overload_web/presentation/: api.py  config.py  constants.json  dependencies.py  depends_funcs.py  deps.py  dto.py  file_service_dep.py  form_fields.json  frontend.py  overload_api.py  partials.py  record_service_deps.py  schemas.py  service_deps.py  template_service_dep.py
overload_web/services/: handlers.py  unit_of_work.py
overload_web/shared/: schemas.py
overload_web/static/: .gitignore  styles.css
overload_web/templates/: about.html  base.html  home.html  macros.html  process_acq_records.html  process_cat_records.html  process_full_records.html  process_order_records.html  process_records.html  process_sel_records.html  pvf.html  pvf_base.html  pvf_form.html  pvf_home.html
src/overload_web/: __init__.py  sierra_adapters.py
tests/: conftest.py  test_adapters.py  test_api.py  test_depends.py  test_front_end.py  test_marc_adapters.py  test_model.py  test_object_factories.py  test_overload_web.py  test_repository.py  test_schemas.py  test_separated_api.py  test_services.py  test_sierra_adapters.py
tests/data/: bpl-dupes-sample.mrc  bpl-sample.mrc  bpl.json  nypl-dupes-sample.mrc  nypl-sample.mrc  nypl_BL.json  nypl_RL.json  process_bibs_results.json
tests/e2e/: test_api.py
tests/integration/: test_bibs.py  test_fetcher.py  test_files.py  test_live_sierra_session.py  test_record_processing.py  test_record_service.py  test_repository.py
tests/livetests/: test_fetcher.py  test_file_service_live.py
tests/unit/: test_analysis.py  test_attacher.py  test_bib_fetchers.py  test_bib_matcher.py  test_fetcher.py  test_file_io.py  test_file_service.py  test_marc.py  test_marc_adapters.py  test_marc_writer.py  test_match_analysis.py  test_match_service.py  test_matcher.py  test_model.py  test_object_factories.py  test_order_templates.py  test_parser.py  test_record_service.py  test_reporter.py  test_reviewer.py  test_serializer.py  test_services.py  test_sierra_adapters.py  test_sierra_clients.py  test_sierra_responses.py  test_template_service.py  test_update_engine.py  test_update_routine.py  test_updater.py  test_vendor_files.py
(+194 files in other folders)
