[project]
name = "overload-web"
version = "0.1.0"
description = "BookOps Cataloging Department browser-based toolbox"
authors = [{name = "Charlotte Kostelic", email = "charlottekostelic@bookops.org"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12, <4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pymarc (>=5.2.2)",
    "bookops-worldcat (>=1.1.0)",
    "bookops-nypl-platform @ git+https://github.com/BookOps-CAT/bookops-nypl-platform.git",	
    "bookops-bpl-solr @ git+https://github.com/BookOps-CAT/bookops-bpl-solr.git",	
    "fastapi[standard] (>=0.115.6)",
    "bookops-marc @ git+https://github.com/BookOps-CAT/bookops-marc.git",
    "sqlalchemy (>=2.0.40)",
    "file-retriever",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "debugpy (>=1.8.15,<2.0.0)",
    "google-api-python-client (>=2.188.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.4,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pandas-stubs (>=2.3.3.260113,<3.0.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "types-requests>=2.32.0.20241016,<3",
    "types-pyyaml>=6.0.12.20240917,<7",
]

[tool.uv.sources]
file-retriever = { git = "https://github.com/BookOps-CAT/file-retriever", branch = "release/v0.3.0" }

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "overload_web"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"livetest: mark a test hitting live web services",
]
addopts = '-m "not livetest" --cov=overload_web/'

[tool.coverage.run]
branch = true
relative_files = true
source = ["."]
omit = [
    "tests/*",
    "*/tests/*",
    "**/*.html"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
